--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">week2</string>
+    <string name="app_name">SCS</string>
 
     <string name="facebook_app_id">402651070810650</string> <string name="fb_login_protocol_scheme">fb402651070810650</string>
 
